apps/agogos/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agogos-web
  namespace: agogos
spec:
  selector:
    app: agogos-web
  ports:
    - port: 80
      targetPort: 3000
